@@ -1,3 +1,8 @@
+2012-01-10  Hirofumi Kosaka <kosaka@rworks.jp>
+
+        *  util/pandora_manage.pl: Added new optional parameters (str_warning and
+	   str_critical) for module at creation time.
+
 2012-01-05  Hirofumi Kosaka <kosaka@rworks.jp>
 
         * lib/PandoraFMS/Core.pm, util/pandora_manage.pl: Merged from trunk.
